	* acconfig.h, aclocal.m4: Remove
	* config/pathxml.m4: New from aclocal.m4.
	* config/objc-con-autoload.m4: Updated from aclocal.m4
	* config/procfs-exe-link.m4: Idem.
	* config/procfs.m4: Idem.

2002-05-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLHandle.m: Implement ([-hash]) and ([-isEqual:]) based on
	([-absoluteString]) rather than simple pointer comparison.
	* Source/GSHTTPURLHandle.m: ([-bgdConnect]) set host header
	([-loadInBackGround]) use URL port if available.
	More fixes thanks to lcampbel via savannah
	* Headers/Foundation/NSURLHanlde.h: include NSObject.h
	* Source/UnixFileHadle.h: add missing semicolon thanks to Paul Windey

2002-05-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLHandle.m: ([URLHandleClassForURL:]) Fix to return most
	recently registered class rather than first registered one.
	Bug report via savannah

2002-04-30  Adam Fedor  <fedor@gnu.org>

	* Version: 1.3.2
	* Documentation/news.texi: Update.
	* NEWS Regen.

2002-04-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Standardise handling for windoze drive
	specifiers in file paths.
	* Source/NSUser.m: Use ([-stringWithFileSystemRepresentation:length:])
	when importing file names.
	* Source/NSString.m: Update all path handling methods for windoze 
	changes.  Fix several bugs where we did not conform to documentation.

2002-04-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Port
	([-stringWithFileSystemRepresentation:length:]) to windoze...
	Have it convert backslashes to slashes etc.

2002-04-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Improve handling of identifier mapping so that
	an identifier mapped to an empty string (or //) an any place where
	whitespace is permissable is treated as part of that white space.

2002-04-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Interpret a mapping to '//' in the WordMap as
	meaning that the rest of the line containing the mapped value